--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                         <div class="sk-circle10 sk-circle"></div>
                                         <div class="sk-circle11 sk-circle"></div>
                                         <div class="sk-circle12 sk-circle"></div>
-                                      </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -61,7 +61,21 @@
                         </div>
                     </div>
                     <div class="table-container animate-bottom" id="table-container">
-                        <table id="table" data-toggle="table" data-sort-name="showingTimeStart" data-sort-order="asc">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="text-center button-row">
+                                    <button type="button" class="btn btn-outline-secondary active tooltip-btn" id="sortTableByShowingRoomShowingTime" data-toggle="tooltip"
+                                        data-placement="bottom" title="Sortiere die Liste nach den Kinosälen und anschließend nach den Spielzeiten">
+                                    Sortiere nach Saal ➡ Zeit
+                                </button>
+                                    <button type="button" class="btn btn-outline-secondary tooltip-btn" id="sortTableByShowingTimeShowingRoom" data-toggle="tooltip" data-placement="bottom"
+                                        title="Sortiere die Liste nach den Spielzeiten und anschließend nach den Kinosälen">
+                                    Sortiere nach Zeit ➡ Saal
+                                </button>
+                                </div>
+                            </div>
+                        </div>
+                        <table id="table" data-toggle="table" data-classes="table">
                             <thead>
                                 <th data-field="showingTimeStart" data-sortable="true">Beginn</th>
                                 <th data-field="showingTimeEndEST" data-sortable="true">Ende</th>
