Changed buttons to labels to hide the outline

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="text-center button-row">
-                                    <button type="button" class="btn btn-outline-secondary active tooltip-btn" id="sortTableByShowingRoomShowingTime" data-toggle="tooltip"
+                                    <label type="button" class="btn btn-outline-secondary active tooltip-btn" id="sortTableByShowingRoomShowingTime" data-toggle="tooltip"
                                         data-placement="bottom" title="Sortiere die Liste nach den Kinosälen und anschließend nach den Spielzeiten">
                                     Sortiere nach Saal ➡ Zeit
-                                </button>
-                                    <button type="button" class="btn btn-outline-secondary tooltip-btn" id="sortTableByShowingTimeShowingRoom" data-toggle="tooltip" data-placement="bottom"
-                                        title="Sortiere die Liste nach den Spielzeiten und anschließend nach den Kinosälen">
+                                </label>
+                                    <label type="button" class="btn btn-outline-secondary tooltip-btn" id="sortTableByShowingTimeShowingRoom" data-toggle="tooltip"
+                                        data-placement="bottom" title="Sortiere die Liste nach den Spielzeiten und anschließend nach den Kinosälen">
                                     Sortiere nach Zeit ➡ Saal
-                                </button>
+                                </label>
                                 </div>
                             </div>
                         </div>
