--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Spielplan für den aktuellen Tag">
+    <meta name="keywords" content="Citydome Sinsheim, Citydome, Sinsheim, Spielplan">
+    <meta name="author" content="Robert Ehni">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
     <title>Citydome Filmplan</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
 
     <!-- Bootstrap & BootstrapTable CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
