Responsive design overhaul

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Citydome Sinsheim, Citydome, Sinsheim, Spielplan">
     <meta name="author" content="Robert Ehni">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <title>Citydome Filmplan</title>
 
     <!-- Bootstrap & BootstrapTable CSS -->
@@ -37,7 +37,7 @@
                 <div class="container-fluid">
                     <div class="loading-container" id="loading-container">
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-sm-12">
                                 <div class="text-center">
                                     <div class="sk-fading-circle">
                                         <div class="sk-circle1 sk-circle"></div>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-12">
+                            <div class="col-sm-12">
                                 <div class="text-center">
                                     <div id="loading-text"></div>
                                 </div>
