--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker3.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -21,20 +22,23 @@
 </head>
 
 <body>
-    <div class="container-fluid main-content mx-auto">
+    <div class="container-fluid main-content box-padding mx-auto">
         <div class="card">
             <div class="card-header">
                 <div class="text-center">
                     <h1>
-                        Citydome Filmplan für den
-                        <script>
-                            document.write(new Date().getDate() + "." + (new Date().getMonth() + 1) + "." + new Date().getFullYear())
-                        </script>
+                        Citydome Filmplan
                     </h1>
                 </div>
             </div>
             <div class="card-content">
-                <div class="container-fluid">
+                <div class="container-fluid box-padding mx-auto">
+                    <div class="form-group row">
+                        <label for="datepicker" class="col-6 col-xs-6 col-sm-6 col-form-label">Datum</label>
+                        <div class="col-6 col-xs-6 col-sm-6">
+                            <input class="form-control datepicker" data-date-format="dd.mm.yyyy" id="datepicker">
+                        </div>
+                    </div>
                     <div class="loading-container" id="loading-container">
                         <div class="row">
                             <div class="col-sm-12">
@@ -88,7 +92,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </body>
 
 <!-- JQuery & Bootstrap JS -->
@@ -99,6 +102,8 @@
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/locale/bootstrap-table-de-DE.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/locales/bootstrap-datepicker.de.min.js"></script>
 
 <!-- Custom JS-->
 <script src="js/main.js"></script>
