--- a/index.html
+++ b/index.html
@@ -31,67 +31,68 @@
                     </h1>
                 </div>
             </div>
-            <div class="card-content">
-                <div class="container-fluid box-padding mx-auto">
-                    <div class="form-group row">
-                        <label for="datepicker" class="col-6 col-xs-6 col-sm-6 col-form-label">Datum</label>
-                        <div class="col-6 col-xs-6 col-sm-6">
-                            <input class="form-control datepicker" data-date-format="dd.mm.yyyy" id="datepicker">
-                        </div>
-                    </div>
-                    <div class="loading-container" id="loading-container">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="text-center">
-                                    <div class="sk-fading-circle">
-                                        <div class="sk-circle1 sk-circle"></div>
-                                        <div class="sk-circle2 sk-circle"></div>
-                                        <div class="sk-circle3 sk-circle"></div>
-                                        <div class="sk-circle4 sk-circle"></div>
-                                        <div class="sk-circle5 sk-circle"></div>
-                                        <div class="sk-circle6 sk-circle"></div>
-                                        <div class="sk-circle7 sk-circle"></div>
-                                        <div class="sk-circle8 sk-circle"></div>
-                                        <div class="sk-circle9 sk-circle"></div>
-                                        <div class="sk-circle10 sk-circle"></div>
-                                        <div class="sk-circle11 sk-circle"></div>
-                                        <div class="sk-circle12 sk-circle"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="text-center">
-                                    <div id="loading-text"></div>
-                                </div>
+        </div>
+    </div>
+    <div class="card-content">
+        <div class="container-fluid box-padding mx-auto">
+            <form id="datepickerform">
+                <div class="input-group">
+                    <span class="input-group-addon">Datum</span>
+                    <input class="form-control datepicker" data-date-format="dd.mm.yyyy" id="datepicker">
+                </div>
+            </form>
+            <div class="loading-container" id="loading-container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="text-center">
+                            <div class="sk-fading-circle">
+                                <div class="sk-circle1 sk-circle"></div>
+                                <div class="sk-circle2 sk-circle"></div>
+                                <div class="sk-circle3 sk-circle"></div>
+                                <div class="sk-circle4 sk-circle"></div>
+                                <div class="sk-circle5 sk-circle"></div>
+                                <div class="sk-circle6 sk-circle"></div>
+                                <div class="sk-circle7 sk-circle"></div>
+                                <div class="sk-circle8 sk-circle"></div>
+                                <div class="sk-circle9 sk-circle"></div>
+                                <div class="sk-circle10 sk-circle"></div>
+                                <div class="sk-circle11 sk-circle"></div>
+                                <div class="sk-circle12 sk-circle"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="table-container animate-bottom" id="table-container">
-                        <table id="table" data-toggle="table" data-classes="table">
-                            <thead>
-                                <th data-field="showingTimeStart" data-sortable="true">Beginn</th>
-                                <th data-field="showingTimeEndEST" data-sortable="true">Ende</th>
-                                <th data-field="showingRoom" data-sortable="true">Kino</th>
-                                <th data-field="title" data-sortable="true">Name</th>
-                                <th data-field="fsk" data-sortable="true">FSK</th>
-                                <th data-field="effects" data-sortable="true">3D</th>
-                                <th data-field="playtime" data-sortable="true">Laufzeit</th>
-                            </thead>
-                        </table>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="text-center">
+                            <div id="loading-text"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="card-footer">
-                <div class="text-center">
-                    © Robert Ehni
-                    <script>
-                        document.write(new Date().getFullYear())
-                    </script>
-                </div>
+            <div class="table-container animate-bottom" id="table-container">
+                <table id="table" data-toggle="table" data-classes="table">
+                    <thead>
+                        <th data-field="showingTimeStart" data-sortable="true">Beginn</th>
+                        <th data-field="showingTimeEndEST" data-sortable="true">Ende</th>
+                        <th data-field="showingRoom" data-sortable="true">Kino</th>
+                        <th data-field="title" data-sortable="true">Name</th>
+                        <th data-field="fsk" data-sortable="true">FSK</th>
+                        <th data-field="effects" data-sortable="true">3D</th>
+                        <th data-field="playtime" data-sortable="true">Laufzeit</th>
+                    </thead>
+                </table>
             </div>
         </div>
+    </div>
+    <div class="card-footer">
+        <div class="text-center">
+            © Robert Ehni
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+        </div>
+    </div>
 </body>
 
 <!-- JQuery & Bootstrap JS -->
