Removed outline from refresh button

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
 <body>
     <div class="container flex-container">
         <div class="container-fluid box-padding mx-auto">
-                <div class="card card-header">
-                    <div class="text-center">
-                        <h1>
-                            Citydome Filmplan
-                        </h1>
-                    </div>
+            <div class="card card-header">
+                <div class="text-center">
+                    <h1>
+                        Citydome Filmplan
+                    </h1>
                 </div>
+            </div>
         </div>
         <div class="card-content flex-fill-height">
             <div class="container-fluid box-padding mx-auto">
                 <form id="datepickerform">
                     <div class="input-group">
                         <span class="input-group-addon">Datum</span>
-                        <input class="form-control datepicker" data-date-format="dd.mm.yyyy" id="datepicker">
-                        <label type="button" class="input-group-addon btn btn-default" onclick="loadMovieList()">
+                        <input class="form-control datepicker" data-ate-format="dd.mm.yyyy" id="datepicker">
+                        <a href="#" role="button" class="input-group-addon btn btn-default active no-outline-button" aria-pressed="true" onclick="loadMovieList()">
                             <span class="fa fa-refresh"/>
-                        </label>
+                        </a>
                     </div>
                 </form>
                 <div class="loading-container" id="loading-container">
