Removed focus from link on mobile

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <div class="input-group">
                         <span class="input-group-addon">Datum</span>
                         <input class="form-control datepicker" data-ate-format="dd.mm.yyyy" id="datepicker">
-                        <a href="#" role="button" class="input-group-addon btn btn-default active no-outline-button" aria-pressed="true" onclick="loadMovieList()">
+                        <label href="#" role="button" class="input-group-addon btn btn-default active no-outline-button no-href-focus" aria-pressed="true" onclick="loadMovieList()">
                             <span class="fa fa-refresh"/>
-                        </a>
+                        </label>
                     </div>
                 </form>
                 <div class="loading-container" id="loading-container">
