--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <form id="datetimepickerform">
                     <div class="input-group">
                         <span class="input-group-addon">Datum</span>
-                        <input class="form-control datetimepicker" id="datetimepicker">
+                        <input class="form-control datetimepicker" readonly="true" id="datetimepicker">
                         <label href="#" role="button" class="input-group-addon btn btn-default active no-outline-button no-href-focus" aria-pressed="true" onclick="loadMovieList()">
                             <span class="fa fa-refresh"/>
                         </label>
