Added movie picture in tooltip of movie name

--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
                                 <th data-field="showingTimeStart" data-sortable="true">Beginn</th>
                                 <th data-field="showingTimeEndEST" data-sortable="true">Ende</th>
                                 <th data-field="showingRoom" data-sortable="true">Kino</th>
-                                <th data-field="title" data-sortable="true" class="hide-on-mobile">Name</th>
+                                <th data-field="title" data-sortable="true" data-formatter="movieTitleFormatter" class="hide-on-mobile">Name</th>
                                 <th data-field="fsk" data-sortable="true" class="hide-on-mobile">FSK</th>
                                 <th data-field="fskShort" data-sortable="true" class="show-on-mobile">FSK</th>
                                 <th data-field="effects" data-sortable="true">3D</th>
                                 <th data-field="playtime" data-sortable="true" class="hide-on-mobile">Laufzeit</th>
+                                <th data-field="imgUrl" data-visible="false">Plakat ID</th>
                             </thead>
                         </table>
                     </div>
